Fix alert overflow of inner blocks in wp 5.2

--- a/src/blocks.editor.scss
+++ b/src/blocks.editor.scss
@@ -367,8 +367,7 @@
 
 [data-type="advanced-bootstrap-blocks/container"],
 [data-type="advanced-bootstrap-blocks/card"],
-[data-type="advanced-bootstrap-blocks/jumbotron"],
-[data-type="advanced-bootstrap-blocks/card-deck"] {
+[data-type="advanced-bootstrap-blocks/jumbotron"] {
 	>.block-editor-block-list__block-edit {
 		padding: 0 !important;
 		margin: 0 !important;
@@ -387,7 +386,8 @@
 
 [data-type="advanced-bootstrap-blocks/row"],
 [data-type="advanced-bootstrap-blocks/jumbotron"],
-[data-type="advanced-bootstrap-blocks/card-deck"] {
+[data-type="advanced-bootstrap-blocks/card-deck"],
+[data-type="advanced-bootstrap-blocks/alert"] {
 	max-width: 100%;
 	width: 100%;
 	padding: 0;
